fixed calendar rendering, cache generation, applied html formatting in cache files for better readability and positioned calendars via css

--- a/html/irclogs.css
+++ b/html/irclogs.css
@@ -1,8 +1,9 @@
 /* CSS Document */
 .calendar {
+  float:right;
   background-color: #FFFFFF;
-  margin: 0;
-  padding: 0;
+  margin-right: 25px;
+  margin-top: -405px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 0.9em;
   border: 1px solid #DCDCDC;
